--- a/src/assets/scss/app/sections/_contact.scss
+++ b/src/assets/scss/app/sections/_contact.scss
@@ -22,11 +22,4 @@
     margin-bottom: 25px;
     min-width: 100%;
   }
-
-  @media only screen and (min-width: $responsive-width) {
-    &-map {
-      // height: 360px;
-      min-width: 426px;
-    }
-  }
 }
