--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -6,7 +6,6 @@ body {
   font-size: 14px;
   font-weight: 400;
   margin: 0;
-  min-width: 454px;
   padding: 0;
 }
 
